# medium-tts-openAI

./: .gitignore
medium_to_audiobook/: Cargo.toml
medium_to_audiobook/src/: main.rs
