[package]
name = "medium_to_audiobook"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres = { version = "0.19.0", features = ["with-serde_json-1"] }
dotenv = "0.15.0"